@@ -1,3 +1,7 @@
+2007-12-22  Andreas Kirschbaum
+
+	* Fix multi-tile monsters sometimes leaving behind ghost images.
+
 2007-12-21  Andreas Kirschbaum
 
 	* Prune old messages from the message window.
